# busybees

./: .env.sample  .gitignore  Cargo.toml  README.md  deploy  deploy.sh  gencert.sh  schema.rs
busybees/: Cargo.toml  README.md
busybees-encrypter/: Cargo.toml  README.md
busybees-encrypter/src/: main.rs
busybees-reimager/: Cargo.toml  README.md
busybees-reimager/src/: main.rs
busybees-server/: Cargo.toml  README.md
busybees-server/src/: error.rs  extensions.rs  lib.rs  main.rs  middleware.rs  state.rs
busybees-server/src/handlers/: auth.rs  mod.rs  posts.rs
busybees-server/src/handlers/admin/: mod.rs  posts.rs
busybees-server/src/handlers/api/: images.rs  mod.rs  posts.rs
busybees-server/src/handlers/api/posts/: images.rs  mod.rs
busybees-server/src/pages/: about.rs  auth.rs  home.rs  page.rs  post.rs
busybees-server/src/pages/admin/: mod.rs  posts.rs
busybees/src/: imaging.rs  lib.rs
busybees/src/store/: authors.rs  images.rs  posts.rs
busybees/src/store/posts/: access.rs  mod.rs  models.rs
designs/: bee-b.afdesign  colors.afdesign
migrations/2020-03-11-030524_create_posts/: down.sql  up.sql
migrations/2020-03-23-030510_create_authors/: down.sql  up.sql
migrations/2020-04-16-031146_create_image_extract_fn/: down.sql
migrations/2020-05-09-004616_basic-analytics/: down.sql  up.sql
migrations/2020-05-16-033958_images/: up.sql
migrations/2020-05-17-010946_nullable_post_content/: down.sql  up.sql
migrations/2020-05-19-005913_add_image_dimensions/: down.sql  up.sql
migrations/2020-05-20-022322_create_images/: down.sql  up.sql
migrations/2020-05-21-002840_remove_first_image_fn/: down.sql  up.sql
migrations/2020-05-21-004357_post_view/: down.sql  up.sql
migrations/2020-06-14-023617_query_views/: down.sql  up.sql
migrations/2020-06-14-024407_post_detail_view/: down.sql  up.sql
migrations/2020-06-15-023443_remove_first_image/: down.sql  up.sql
migrations/2020-07-17-033805_post_delete_cascade/: down.sql  up.sql
migrations/2020-07-20-024854_non_null_author/: down.sql  up.sql
migrations/2020-08-30-031315_published_at_time/: down.sql  up.sql
migrations/2021-02-05-022004_add-deleted-status/: down.sql  up.sql
src/: encryption.rs  error.rs  extensions.rs  guards.rs  imaging.rs  lib.rs  main.bak.rs  main.rs  middleware.rs  models.rs  router.rs  routes.rs  state.rs
src/actions/: mod.rs  posts.rs
src/api/: images.rs  mod.rs  posts.rs
src/handlers/: auth.rs  images.rs  mod.rs  posts.rs  users.rs
src/middleware/: load_user.rs  mod.rs  set_assigns.rs
src/models/: authors.rs  images.rs  mod.rs  posts.rs
src/pages/: about.rs  admin.rs  auth.rs  home.rs  index.rs  layout.rs  mod.rs  not_found.rs  notfound.rs  page.rs  post.rs  posts.rs  sandbox.rs
src/store/: authors.rs  images.rs  mod.rs  posts.rs
src/web/: extensions.rs  guards.rs  mod.rs  (+2 more)
(+40 files in other folders)
