[package]
name = "busybees"
version = "0.1.0"
authors = ["kevlarr"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-files = "0.2"
actix-multipart = "0.2"
actix-rt = "1.0"
chrono = "0.4"
futures = "0.3"
horrorshow = "0.8"
pretty_env_logger = "0.3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.2", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
