[package]
name = "busybees"
version = "0.9.0"
authors = ["kevlarr <6306496+kevlarr@users.noreply.github.com>"]
edition = "2018"

[dependencies]
argonautica = "0.2"
actix-web = {version = "2.0"}
actix-files = "0.2"
actix-multipart = "0.2"
actix-rt = "1.0"
actix-service = "1.0"
actix-session = "0.3"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
futures = "0.3"
horrorshow = "0.8.3"
image = "0.23"
lazy_static = "1.4"
pretty_env_logger = "0.3"
rand = "0.7"
regex = "1.3.7"
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.3.5", default-features = false, features = ["runtime-tokio", "macros", "postgres", "chrono"]}
slug = "0.1"
