[package]
name = "busybees-server"
version = "0.6.5"
authors = ["kevlarr <6306496+kevlarr@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-web = {version = "2.0"}
actix-files = "0.2"
actix-multipart = "0.2"
actix-service = "1.0"
actix-session = "0.3"
busybees = { path = "../busybees" }
horrorshow = "0.8.3"
pretty_env_logger = "0.3"
serde = {version = "1.0", features = ["derive"]}
